--- a/capstone_documentation.Rmd
+++ b/capstone_documentation.Rmd
@@ -81,7 +81,7 @@ Since I use the German version of RStudio the automatically generated weekdays h
 
 ### 3.1 Daily activity
 ```{r echo = T, results = 'hide', message=FALSE}
-daily_activity <- read_csv("../Fitabase Data 4.12.16-5.12.16/dailyActivity_merged.csv")
+daily_activity <- read_csv("dailyActivity_merged.csv")
 skim_without_charts(daily_activity)
 daily_activity <- clean_names(daily_activity)
 daily_activity$activity_date <- as.Date(daily_activity$activity_date, format="%m/%d/%Y")
@@ -98,7 +98,7 @@ glimpse(daily_activity)
 
 ### 3.2 Hourly calories
 ```{r echo = T, results = 'hide', message=FALSE}
-hourly_calories <- read_csv("../Fitabase Data 4.12.16-5.12.16/hourlyCalories_merged.csv")
+hourly_calories <- read_csv("hourlyCalories_merged.csv")
 skim_without_charts(hourly_calories)
 hourly_calories <- clean_names(hourly_calories)
 hourly_calories$activity_hour <- strptime(hourly_calories$activity_hour, "%m/%d/%Y %I:%M:%S %p")
@@ -115,7 +115,7 @@ glimpse(hourly_calories)
 
 ### 3.3 Hourly steps
 ```{r echo = T, results = 'hide', message=FALSE}
-hourly_steps <- read_csv("../Fitabase Data 4.12.16-5.12.16/hourlySteps_merged.csv")
+hourly_steps <- read_csv("hourlySteps_merged.csv")
 skim_without_charts(hourly_steps)
 hourly_steps <- clean_names(hourly_steps)
 hourly_steps$activity_hour <- strptime(hourly_steps$activity_hour, "%m/%d/%Y %I:%M:%S %p")
@@ -140,7 +140,7 @@ glimpse(hourly_data)
 
 ### 3.4 Sleep
 ```{r echo = T, results = 'hide', message=FALSE}
-sleep_day <- read_csv("../Fitabase Data 4.12.16-5.12.16/sleepDay_merged.csv")
+sleep_day <- read_csv("sleepDay_merged.csv")
 skim_without_charts(sleep_day)
 sleep_day <- clean_names(sleep_day)
 sleep_day$sleep_day <- strptime(sleep_day$sleep_day, "%m/%d/%Y %I:%M:%S %p")
@@ -162,7 +162,7 @@ Data on sleeping is only available from 24 of the 33 users.
 
 ### 3.5 Weight
 ```{r echo = T, results = 'hide', message=FALSE}
-weight_log_info <- read_csv("../Fitabase Data 4.12.16-5.12.16/weightLogInfo_merged.csv")
+weight_log_info <- read_csv("weightLogInfo_merged.csv")
 skim_without_charts(weight_log_info)
 weight_log_info <- clean_names(weight_log_info)
 sum(duplicated(weight_log_info))
@@ -177,7 +177,7 @@ The data frame for weight only consists of 67 rows and of data from only 8 of th
 
 ### 3.6 Heart rate
 ```{r echo = T, results = 'hide', message=FALSE}
-heartrate_seconds <- read_csv("../Fitabase Data 4.12.16-5.12.16/heartrate_seconds_merged.csv")
+heartrate_seconds <- read_csv("heartrate_seconds_merged.csv")
 skim_without_charts(heartrate_seconds)
 heartrate_seconds <- clean_names(heartrate_seconds)
 sum(duplicated(heartrate_seconds))
