--- a/capstone_documentation.Rmd
+++ b/capstone_documentation.Rmd
@@ -52,6 +52,7 @@ library("janitor")
 library("tidyverse")
 library("dplyr")
 library("cowplot")
+library("formattable")
 ```
 
 The **cleaning process** consists of the following steps **for each data set**:
